2003-12-01  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.c (em_folder_tree_get_folder_info__got): Make
	sure our parent folder hasn't been unsubscribed or else we get a
	segfault here if it has.

03-11-28  Dave Camp  <dave@ximian.com>

	* em-folder-tree.c (render_pixbuf): Set the pixbuf renderer
	invisible for stores.

2003-11-25  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-config.c (mail_config_get_account_by_uid): New function.

	* em-folder-tree.c (tree_store_set_folder_info): Expand the tree
	node if the saved state tells us it was expanded the previous
	session.
	(em_folder_tree_load_state): Load the saved state.
	(em_folder_tree_add_store): Conditionally expand the store node.
	(em_folder_tree_new_with_model): Expand all the nodes that should
	be expanded.

2003-12-01  Radek Doulik  <rodo@ximian.com>

	* em-folder-tree.c (render_pixbuf): use CAMEL_VTRASH_NAME,
	CAMEL_VJUNK_NAME

2003-11-28  Radek Doulik  <rodo@ximian.com>

	* em-folder-tree.c (render_pixbuf): added junk icon to folder
	icons

2003-12-01  Not Zed  <NotZed@Ximian.com>

	* em-folder-browser.c (emfb_edit_cut, emfb_edit_copy)
	(emfb_edit_paste): override the em-folder-view impl, and handle
	the search bar properly.  For #48746.

	* mail-security.glade: added some padding to the security details
	frames.

	* em-format-html-display.c (efhd_xpkcs7mime_validity_clicked):
	some cosmetic layout changes.

2003-11-27  Charles Zhang  <charles.zhang@sun.com>

	* mail-account-editor.c (construct): connect "changed" signal.
	(mail_account_editor_changed): change signal handler.
	Fixes bug #48998.

2003-11-30  Ettore Perazzoli  <ettore@ximian.com>

	* mail-offline-handler.c: Remove all the syncFolder stuff since
	it's not in the Component interface anymore.

	* mail-mt.c: Remove declaration for global_shell_client.  #if 0
	all the code that uses that.

	* mail-component-factory.c: Remove declaration for
	global_shell_client.

	* mail-vfolder.c: Remove declaration for global_shell_client.
